2004-06-17  Juanma Barranquero  <lektu@terra.es>

	* files.el (parse-colon-path, cd): Mention in docstring that the
	path separator is colon in GNU-like systems.

	* newcomment.el (comment-region-internal): Fix docstring.

	* emacs-lisp/ewoc.el (ewoc-create, ewoc-map, ewoc-locate)
	(ewoc-invalidate, ewoc-collect): Doc fixes.
	(ewoc--create-node, ewoc--delete-node-internal):
	Fix typos in docstring.

2004-06-15  Luc Teirlinck  <teirllm@auburn.edu>

	* files.el (buffer-stale-function): Add hyperlink to emacs-xtra
	manual to docstring.

2004-06-15  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* ps-print.el (ps-time-stamp-iso8601): Comment doc string of defalias.

2004-06-15  Luc Teirlinck  <teirllm@auburn.edu>

	* dired-aux.el (dired-do-redisplay, dired-maybe-insert-subdir):
	Add hyperlink to emacs-xtra manual to docstring.

	* autorevert.el (global-auto-revert-non-file-buffers): Add
	hyperlink to emacs-xtra manual to docstring, as well as an
	info-link.

2004-06-14  Juanma Barranquero  <lektu@terra.es>

	* image.el (image-library-alist): New variable to map image types
	to external libraries.  Initialized to nil, unless system-specific
	configs change it.
	(image-type-available-p): Determine whether an image type is
	available by calling `init-image-library'.

	* term/w32-win.el (image-library-alist): Initialize to a known set
	of probable library names.

2004-06-14  Kenichi Handa  <handa@m17n.org>

	* international/code-pages.el (windows-1256, cp1125): Fix tables
	for several characters.

	* international/utf-8.el (ccl-encode-mule-utf-8): Fix previous
	change.

2004-06-13  Richard M. Stallman  <rms@gnu.org>

	* textmodes/paragraphs.el (sentence-end): Add 0x5397d as close brace.

	* emulation/pc-select.el: Doc fixes: say "PC Selection mode",
	not "`pc-selection-mode'".

	* emacs-lisp/bytecomp.el: Put `...' around symbols in warning messages.

	* simple.el (previous-matching-history-element): Specify a default.
